--- a/404.html
+++ b/404.html
@@ -18,8 +18,10 @@ permalink: /404.html
 </style>
 
 <div class="container">
-  <h1>404</h1>
+  <br></br>
+  <h2>404</h2>
 
-  <p><strong>Page not found :(</strong></p>
-  <p>The requested page could not be found.</p>
+  <p><strong>Looks like something broke!</strong></p>
+  <p>Or maybe I got embarrassed by my old work and took it down. Either way, the requested page could not be found.</p>
+  <p>If you think something's missing, feel free to let me know on Twitter at [@elliotherriman](https://twitter.com/elliotherriman).</p>
 </div>
