--- a/404.html
+++ b/404.html
@@ -9,19 +9,14 @@ permalink: /404.html
     max-width: 600px;
     text-align: center;
   }
-  h1 {
-    margin: 30px 0;
-    font-size: 4em;
-    line-height: 1;
-    letter-spacing: -1px;
-  }
 </style>
 
 <div class="container">
-  <br></br>
-  <h2>404</h2>
+  
+  <p><h2>404</h2><p>
 
   <p><strong>Looks like something broke!</strong></p>
-  <p>Or maybe I got embarrassed by my old work and took it down. Either way, the requested page could not be found.</p>
+  <p>Or maybe I got embarrassed by my old work and took it down.</p>
+  <p>Either way, the requested page could not be found.</p>
   <p>If you think something's missing, feel free to let me know on Twitter at [@elliotherriman](https://twitter.com/elliotherriman).</p>
 </div>
